<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_expense_details"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <EditText
            android:id="@+id/etDate"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="0dp"
            android:minHeight="48dp"
            android:hint="@string/date_hint"
            android:inputType="date"
            android:importantForAutofill="yes"
            android:autofillHints="date"/>

        <EditText
            android:id="@+id/etReason"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="480dp"
            android:minHeight="48dp"
            android:hint="@string/reason_for_expense"
            android:inputType="text"
            android:importantForAutofill="yes"
            android:autofillHints="text"/>

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="480dp"
            android:minHeight="48dp"
            android:hint="@string/amount_hint"
            android:inputType="numberDecimal"
            android:importantForAutofill="yes"
            android:autofillHints="numberDecimal"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_gravity="center"
        android:padding="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"/>
</LinearLayout>
